infrastructure/keycloak/production/route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tls-secure-app-route
  namespace: keycloak-operator
spec:
  parentRefs:
    - name: gateway-dkroesen
      namespace: nginx-gateway
      sectionName: https-auth
  hostnames:
    - "auth.dkroesen.nl"
  rules:
    - backendRefs:
        - name: keycloak-service
          port: 8443
